Migrate/overflight (#9)
* overflight endpoint, finish api server startup, fix db type package

* regen docs

* add examples to Flightv1 struct
